welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:5: error: type mismatch;
 found   : Unit
 required: Int
  for (k<-1 to n-1){
        ^